5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1649_1054.log
== TEST (2019-04-15 07:45:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r= 2x+y=3
if(r==3):
	mensagem:"ponto pertencente a reta"
else:
	mensagem:"ponto nao pertencente a reta"
-- ERROR:
File "XXXX", line 7
    r= 2x+y=3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:45:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r= 2x+y-3
if(r==3):
	mensagem:"ponto pertencente a reta"
else:
	mensagem:"ponto nao pertencente a reta"
-- ERROR:
File "XXXX", line 7
    r= 2x+y-3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:46:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r=2x+y-3
if(r==0):
	mensagem:"ponto pertencente a reta"
else:
	mensagem:"ponto nao pertencente a reta"
-- ERROR:
File "XXXX", line 7
    r=2x+y-3
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:46:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r= 2*x+y=3
if(r==3):
	mensagem:"ponto pertencente a reta"
else:
	mensagem:"ponto nao pertencente a reta"
-- ERROR:
File "XXXX", line 7
    r= 2*x+y=3
      ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:47:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r= 2*x+y=3
if(r==3):
	mensagem="ponto pertencente a reta"
else:
	mensagem="ponto nao pertencente a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 7
    r= 2*x+y=3
      ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:47:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r=2*x+y=3
if(r==3):
	mensagem="ponto pertencente a reta"
else:
	mensagem="ponto nao pertencente a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 7
    r=2*x+y=3
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:48:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r=2*x+y-3
if(r==0):
	mensagem="ponto pertencente a reta"
else:
	mensagem="ponto nao pertencente a reta"
print(mensagem)
-- OUTPUT:
ponto pertencente a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:48:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r=2*x+y-3
if(r==0):
	mensagem="ponto pertencente a reta"
else:
	mensagem="ponto nao pertencente a reta"
print(mensagem)
-- EXECUTION TIME:
0.142407
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertencente a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertencente a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:48:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("escolhaum numero: "))
y=int(input("escolhaum numero: "))
p=(x,y)
r=2*x+y-3
if(r==0):
	mensagem="ponto pertence a reta"
else:
	mensagem="ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.185413
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
